@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -38,6 +38,12 @@ import javax.annotation.Nullable;
 public class User implements Recyclable {
 
     /**
+     * Domain of the logged in user
+     */
+    @Nullable
+    private String domain;
+
+    /**
      * Identifier of the logged in user, e.g. the primary key of the user
      */
     @Nullable
@@ -52,6 +58,23 @@ public class User implements Recyclable {
      */
     @Nullable
     private String username;
+
+
+    /**
+     * Domain of the logged in user
+     */
+    @Nullable
+    public String getDomain() {
+        return domain;
+    }
+
+    /**
+     * Domain of the logged in user
+     */
+    public User withDomain(@Nullable String domain) {
+        this.domain = domain;
+        return this;
+    }
 
     /**
      * Identifier of the logged in user, e.g. the primary key of the user
@@ -103,18 +126,20 @@ public class User implements Recyclable {
 
     @Override
     public void resetState() {
+        domain = null;
         id = null;
         email = null;
         username = null;
     }
 
     public void copyFrom(User other) {
+        this.domain = other.domain;
         this.email = other.email;
         this.id = other.id;
         this.username = other.username;
     }
 
     public boolean hasContent() {
-        return id != null || email != null || username != null;
+        return domain != null || id != null || email != null || username != null;
     }
 }
