@@ -89,8 +89,19 @@ class TransactionInstrumentationTest extends AbstractInstrumentationTest {
 
     @Test
     void testSetUser() {
+        transaction.setUser("foo", "bar", "baz", "abc");
+        endTransaction();
+        assertThat(reporter.getFirstTransaction().getContext().getUser().getDomain()).isEqualTo("abc");
+        assertThat(reporter.getFirstTransaction().getContext().getUser().getId()).isEqualTo("foo");
+        assertThat(reporter.getFirstTransaction().getContext().getUser().getEmail()).isEqualTo("bar");
+        assertThat(reporter.getFirstTransaction().getContext().getUser().getUsername()).isEqualTo("baz");
+    }
+
+    @Test
+    void testSetUserWithoutDomain() {
         transaction.setUser("foo", "bar", "baz");
         endTransaction();
+        assertThat(reporter.getFirstTransaction().getContext().getUser().getDomain()).isNull();
         assertThat(reporter.getFirstTransaction().getContext().getUser().getId()).isEqualTo("foo");
         assertThat(reporter.getFirstTransaction().getContext().getUser().getEmail()).isEqualTo("bar");
         assertThat(reporter.getFirstTransaction().getContext().getUser().getUsername()).isEqualTo("baz");
@@ -137,12 +148,13 @@ class TransactionInstrumentationTest extends AbstractInstrumentationTest {
             .setLabel("stringKey", randomString)
             .setLabel("numberKey", randomInt)
             .setLabel("booleanKey", randomBoolean)
-            .setUser("foo", "bar", "baz")
+            .setUser("foo", "bar", "baz", "abc")
             .setResult("foo");
         endTransaction();
         assertThat(reporter.getFirstTransaction().getNameAsString()).isEqualTo("foo");
         assertThat(reporter.getFirstTransaction().getType()).isEqualTo("foo");
         assertThat(reporter.getFirstTransaction().getContext().getLabel("foo")).isEqualTo("bar");
+        assertThat(reporter.getFirstTransaction().getContext().getUser().getDomain()).isEqualTo("abc");
         assertThat(reporter.getFirstTransaction().getContext().getUser().getId()).isEqualTo("foo");
         assertThat(reporter.getFirstTransaction().getContext().getUser().getEmail()).isEqualTo("bar");
         assertThat(reporter.getFirstTransaction().getContext().getUser().getUsername()).isEqualTo("baz");
