@@ -104,6 +104,7 @@ public abstract class AbstractSpringBootTest {
         // which is before the transaction has ended
         final Transaction transaction = reporter.getFirstTransaction(500);
         assertThat(transaction.getNameAsString()).isEqualTo("TestApp#greeting");
+        assertThat(transaction.getContext().getUser().getDomain()).isEqualTo("domain");
         assertThat(transaction.getContext().getUser().getId()).isEqualTo("id");
         assertThat(transaction.getContext().getUser().getEmail()).isEqualTo("email");
         assertThat(transaction.getContext().getUser().getUsername()).isEqualTo("username");
@@ -133,7 +134,7 @@ public abstract class AbstractSpringBootTest {
 
         @GetMapping("/")
         public String greeting() {
-            ElasticApm.currentTransaction().setUser("id", "email", "username");
+            ElasticApm.currentTransaction().setUser("id", "email", "username", "domain");
             return "Hello World";
         }
 
